[package]
name = "timeflake-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "TimeflakeTiny is 64-bit sized timebased unique, roughly-ordered and compatible with sqlite. Inspired by original Timeflake that is 128-bit sized."
repository = "https://github.com/perillamint/timeflake-rs"
keywords = ["timeflake"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.1"
rand = "0.8"
custom_error = "1.9"
timeflake-rs = "0.2.3"
